--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="row" style="margin-top: 2em;">
       <div class="large-4 columns">
         <h3>Basic Usage</h3>
-        <p>Demonstrates basic usage of the plugin.</p>
+        <p>Demonstrates basic usage of the plugin which i'll now change.</p>
       </div>
       <div class="large-8 columns">
         <div class="twentytwenty-container">
