vertical slide changes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="row" style="margin-top: 2em; margin-bottom: 2em;">
       <div class="large-4 columns">
         <h3>Vertical Orientation</h3>
-        <p>Demonstrates sliding up and down.</p>
+        <p>Demonstrates sliding up and down which i don't think is as good.</p>
       </div>
       <div class="large-8 columns">
         <div class="twentytwenty-container" data-orientation="vertical">
