--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       </div>
       <div class="large-8 columns">
         <div class="twentytwenty-container">
-          <img src="img/1_1.jpg" />
-          <img src="img/1_2.jpg" />
+          <img src="img/0381e4c5745c498e93104d2990e2b323.png" />
+          <img src="img/lump_overhead.jpg" />
         </div>
       </div>
     </div>
